--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <p class="title job-fit-header ml-4 mb-6">
                     Job fit: <span id="jobFitStatus" class="job-fit-status"></span>
                 </p>
-                <div class="columns is-multiline is-flex is-justify-content-space-evenly">
+                <div class="columns is-multiline is-flex is-justify-space-around">
                     <div class="column box is-half report-card p-0 is-shadowless">
                         <div class="report-header">
                             <svg class="report-circle" width="100%" height="100%" viewBox="30 -50 200 200">
